<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name"
                android:id="@+id/firstname"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name"
                android:id="@+id/lastname"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_marginLeft="150dp"
                android:id="@+id/selected"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="end|bottom"/>
        </LinearLayout>

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:id="@+id/email"/>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>